--- a/src/components/cardGame/style.css
+++ b/src/components/cardGame/style.css
@@ -1,5 +1,9 @@
 .card-game{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 130px;
     height: 160px;
-background-color: #051932;
+background-color: var(--color-alura);
+border: 4px solid var(--color-floral-white);
 }
